--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@ under the License.
 
   <groupId>org.apache.syncope</groupId>
   <artifactId>syncope</artifactId>
-  <version>2.1.15-SNAPSHOT</version>
+  <version>2.1.14.1</version>
   <packaging>pom</packaging>
 
   <parent>
@@ -2859,7 +2859,7 @@ under the License.
     <module>standalone</module>
     <module>deb</module>
     <module>installer</module>
-    <module>ide</module>
+<!--    <module>ide</module>-->
   </modules>
 
 </project>
