--- a/pom.xml
+++ b/pom.xml
@@ -409,7 +409,7 @@ under the License.
 
     <cxf.version>3.5.6</cxf.version>
 
-    <jackson.version>2.12.7</jackson.version>
+    <jackson.version>2.17.1</jackson.version>
 
     <spring.version>5.3.33</spring.version>
     <spring-security.version>5.7.12</spring-security.version>
@@ -864,7 +864,7 @@ under the License.
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}.1</version>
+        <version>${jackson.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
@@ -1215,7 +1215,7 @@ under the License.
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>fop</artifactId>
-        <version>2.7</version>
+        <version>2.9</version>
         <exclusions>
           <exclusion>
             <groupId>xalan</groupId>
